# spdx3query

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
src/spdx3query/: __init__.py  cmd.py  main.py  name.py  spdx3.py
src/spdx3query/commands/: __init__.py  build.py  find.py  info.py  load.py  show.py  vuln.py  write.py
tests/: test_cli.py
